--- a/Motostore/2-Styles_css/Style-main.css
+++ b/Motostore/2-Styles_css/Style-main.css
@@ -3,6 +3,7 @@
 src: url(../Motostore_res/ReadexPro-Variable.ttf);
 }
 .head1 {
+position: absolute;
 width: 100%;
 height: 80px;
 background-color: #000;
@@ -11,6 +12,7 @@ right:0%;
 left: 0%;
 top: 0%;
 text-align: center;
+z-index: 10;
 }
 
 .bg {
@@ -48,13 +50,10 @@ height: 70px;
 
 .call {
     position: absolute;
-    right: 15%;
-    top: 40%;
-    text-align: center;
-    font-family: "ReadexPro";
-    color: #555555;
-    text-decoration: none;
-    text-transform: none;
+    right: 13%;
+    top: 20%;
+    width: 128px;
+    height: 47px;
 }
 
 .basement {
@@ -76,4 +75,14 @@ height: 70px;
     color: #fff;
 }
 
+link.link {
+    width: 100;
+}
 
+img.index_link {
+    margin-left: auto;
+    margin-right: auto;  
+    width: 640px; 
+    height: 494px;
+
+}
