--- a/Motostore/2-Styles_css/Style-main.css
+++ b/Motostore/2-Styles_css/Style-main.css
@@ -2,17 +2,18 @@
     font-family: 'ReadexPro';
 src: url(../Motostore_res/ReadexPro-Variable.ttf);
 }
+
 .head1 {
-position: absolute;
-width: 100%;
-height: 80px;
-background-color: #000;
-position: fixed;
-right:0%;
-left: 0%;
-top: 0%;
-text-align: center;
-z-index: 10;
+    position: absolute;
+    width: 100%;
+    height: 80px;
+    background-color: #000;
+    position: fixed;
+    right:0%;
+    left: 0%;
+    top: 0%;
+    text-align: center;
+    z-index: 10;
 }
 
 .bg {
@@ -23,29 +24,29 @@ z-index: 10;
     left: 0%;
     width: 100%;
     z-index: -10000;
-    }
+}
 
 .menu{
-width: 260px;
-height: 75px;
-position: absolute;
-left: 50px;
+    width: 260px;
+    height: 75px;
+    position: absolute;
+    left: 50px;
 }
 
 .logo_text{
-font-family: 'ReadexPro';
-font-weight: bold;
-font-size: 35px;
-color: #fff;
-top: -17px;
-position: relative;
+    font-family: 'ReadexPro';
+    font-weight: bold;
+    font-size: 35px;
+    color: #fff;
+    top: -17px;
+    position: relative;
 }
 
 .logo_img{
-position: relative;
-top: 5px;
-width: 70px;
-height: 70px;
+    position: relative;
+    top: 5px;
+    width: 70px;
+    height: 70px;
 }
 
 .call {
@@ -59,7 +60,7 @@ height: 70px;
 .basement {
     position: fixed;
     width: 100%;
-    top: 90%;
+    bottom: 10%;
     text-align: center;
     font-family: "ReadexPro";
     color: #555555;
@@ -75,14 +76,18 @@ height: 70px;
     color: #fff;
 }
 
-link.link {
-    width: 100;
-}
-
 img.index_link {
-    margin-left: auto;
-    margin-right: auto;  
+    position: absolute;
+    
+    left: 30%; 
     width: 640px; 
     height: 494px;
+}
 
+img.index_link_text {
+    position: absolute;
+    left: 30%;
+    height: 120px;
+    width: 500px;
+    z-index: 1;
 }
