--- a/Motostore/2-Styles_css/Style-main.css
+++ b/Motostore/2-Styles_css/Style-main.css
@@ -23,6 +23,7 @@ src: url(../Motostore_res/ReadexPro-Variable.ttf);
     right:0%;
     left: 0%;
     width: 100%;
+    height: 3000px;
     z-index: -10000;
 }
 
@@ -60,7 +61,7 @@ src: url(../Motostore_res/ReadexPro-Variable.ttf);
 .basement {
     position: fixed;
     width: 100%;
-    bottom: 10%;
+    bottom: 5%;
     text-align: center;
     font-family: "ReadexPro";
     color: #555555;
@@ -77,17 +78,18 @@ src: url(../Motostore_res/ReadexPro-Variable.ttf);
 }
 
 img.index_link {
-    position: absolute;
-    
-    left: 30%; 
+    position: absolute; 
+    margin-top: -15%;
+    left: 30%;
     width: 640px; 
     height: 494px;
+    z-index: -2;
 }
 
 img.index_link_text {
-    position: absolute;
-    left: 30%;
+    position: relative;
+    left: 5%;
     height: 120px;
     width: 500px;
-    z-index: 1;
+    
 }
