--- a/Motostore/2-Styles_css/Style-main.css
+++ b/Motostore/2-Styles_css/Style-main.css
@@ -88,8 +88,8 @@ img.index_link {
 
 img.index_link_text {
     position: relative;
-    left: 5%;
+    top: -6%;
+    left: 3%;
     height: 120px;
     width: 500px;
-    
 }
