--- a/Motostore/2-Styles_css/Style-lemma.css
+++ b/Motostore/2-Styles_css/Style-lemma.css
@@ -1,27 +1,23 @@
-@font-face {
-    font-family: 'ReadexPro';
-src: url(../Motostore_res/ReadexPro-Variable.ttf);
-}
 
 .bg_lemma {
-    left: 0%;
-    margin: 0px;
+    left: 0vw;
+    margin: 0vw;
     position: fixed;
     width: 100%;
     height: 100%;
     z-index: -100;
-    filter: blur(25px);
+    filter: blur(1vw);
 }
 
 .text_title {
     position: absolute;
     top: 100px;
-    left: 38%;
+    left: 38vw;
 }
 
 .descr_title {
     position: absolute;
-    left: 50%;
+    left: 52vw;
     top: 33%;
 
     font-family: 'ReadexPro';
@@ -38,8 +34,8 @@ src: url(../Motostore_res/ReadexPro-Variable.ttf);
 
 .descr {
     position: absolute;
-    left: 50%;
-    top: 50%;
+    left: 50vw;
+    top: 23vw;
     width: 48%;
     line-height: 150%;
     letter-spacing: 0.085em;
@@ -55,14 +51,12 @@ src: url(../Motostore_res/ReadexPro-Variable.ttf);
 
 .moto_img {
     position: absolute;
-    left: 5%;
-    right: 46.82%;
-    top: 25.4%;
-    bottom: 12.8%;
+    left: 5vw;
+    bottom: 12vh;
 }
 
 .link_contact {
     position: absolute;
-    left: 55%;
-    bottom: 12%;
+    left: 57vw;
+    bottom: 12vh;
 }
