--- a/Motostore/2-Styles_css/Style-contact.css
+++ b/Motostore/2-Styles_css/Style-contact.css
@@ -1,14 +1,22 @@
+.bg_contact {
+    left: 0vw;
+    margin: 0vw;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: -100;
+    
+}
+
 .title_contact {
     position: absolute;
     top: 17vh;
     left: 6vw;
-    
-
     font-family: 'ReadexPro';
     font-style: normal;
     font-weight: 700;
     font-size: 6.5vw;
-    line-height: 17.5vh;
+    line-height: 16vh;
     /* or 0px */
 
     color: #FFFFFF;
