--- a/Motostore/2-Styles_css/Style-lemma.css
+++ b/Motostore/2-Styles_css/Style-lemma.css
@@ -17,8 +17,6 @@
 
 .descr_title {
     position: absolute;
-    left: 52vw;
-    top: 33%;
 
     font-family: 'ReadexPro';
     font-style: normal;
@@ -27,22 +25,20 @@
     display: flex;
     align-items: center;
 
-    color: #7BCCCD;
-
-    text-shadow: 0px 2px 3px #7BCCCD;
+    display: flex;
+    align-items: center;
+    text-align: center;
 }
 
 .descr {
     position: absolute;
     left: 50vw;
-    top: 23vw;
     width: 48%;
     line-height: 150%;
     letter-spacing: 0.085em;
     font-family: 'ReadexPro';
     font-style: normal;
     font-weight: 400;
-    font-size: 30px;
     
     color: #FFFFFF;
 
