--- a/Motostore/2-Styles_css/Style-main.css
+++ b/Motostore/2-Styles_css/Style-main.css
@@ -78,9 +78,9 @@ src: url(../Motostore_res/ReadexPro-Variable.ttf);
 }
 
 img.index_link {
-    position: relative; 
-    margin-top: -25vh;
-    left: -15vw;
+    position: absolute; 
+    margin-top: -13%;
+    left: 30%;
     width: 640px; 
     height: 494px;
     z-index: -2;
@@ -88,8 +88,25 @@ img.index_link {
 
 img.index_link_text {
     position: relative;
-    top: -25vh;
-    left: 20vw;
     height: 120px;
     width: 500px;
 }
+
+img.index_link_text:hover {
+    animation-name: text_link_animate;
+    animation-fill-mode: forwards;
+    animation-duration: 1s;
+}
+
+/*@keyframes text_link_animate {
+    0% {
+        top: 0%;
+        width: 500px;
+        height: 120px;
+    }
+    100% {
+        top: 25%;
+        width: 300px;
+        height: 80px;
+    }
+   }*/
