--- a/Motostore/2-Styles_css/Style-contact.css
+++ b/Motostore/2-Styles_css/Style-contact.css
@@ -1,10 +1,10 @@
 .bg_contact {
-    left: 0vw;
-    margin: 0vw;
+    left: -0%;
+    top: -10%;
     position: fixed;
     width: 100%;
-    height: 100%;
-    z-index: -100;
+    height: 120%;
+    z-index: 0;
     
 }
 
